sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:12: error: not found: value gap
    gap = (getValueCount/2).toInt
    ^AlgShellSort:14: error: not found: value gap
    while (gap > 0 && copied) {
           ^AlgShellSort:15: error: not found: value gap
      if (i-gap >= 0) {
            ^AlgShellSort:16: error: not found: value gap
        if (getValue(i-gap) > v) {
                       ^AlgShellSort:17: error: not found: value gap
          copy(i-gap, i-gap+1);
                 ^AlgShellSort:17: error: not found: value gap
          copy(i-gap, i-gap+1);
                        ^AlgShellSort:18: error: not found: value gap
          lastCopied = i-gap
                         ^AlgShellSort:24: error: not found: value gap
      gap = (gap/2).toInt;
      ^