sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  var v:Int = 0
  var h:Int = 1
  var lastCopied:Int = 1
  var copied = true
  
  for (i <- 1 to getValueCount()-1) {
    v = getValue(i)
    lastCopied = i
    copied = true
    gap = (getValueCount/2).toInt
    
    while (gap > 0 && copied) {
      if (i-gap >= 0) {
        if (getValue(i-gap) > v) {
          copy(i-gap, i-gap+1);
          lastCopied = i-gap
        } else {
          copied = false
        }
      }
      
      gap = (gap/2).toInt;
    }
    setValue(lastCopied, v)
  }
}